<resources>
    <string name="app_name">MediEve</string>
    <string name="action_settings">Settings</string>
    <string name="select_time">SELECT TIME</string>
    <string name="select_date">SELECT DATE</string>
    <string name="name">Name</string>
    <string name="medication">Medication</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="disease">Disease:</string>
    <string name="sex">Sex:</string>
    <string name="address">Address:</string>
    <string name="name_lable">Name:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_event">Add Event</string>
    <string name="empty_field">Please enter all fields</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
