<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddEvent.AddEventActivity">

    <LinearLayout
        android:id="@+id/add_name_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/medication"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#AEB6BD" />

        <EditText
            android:id="@+id/edit_medication_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/name"
            android:inputType="textCapWords" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_name_ll">


        <EditText
            android:id="@+id/edit_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_time_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_date_ll">


        <EditText
            android:id="@+id/edit_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_time" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:padding="@dimen/std_padding"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_time_ll" />


</androidx.constraintlayout.widget.ConstraintLayout>