<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddEvent.AddEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/add_name_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/medication"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#AEB6BD" />

            <EditText
                android:id="@+id/edit_medication_name"
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_date_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/add_name_ll"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp">


            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_date"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:id="@+id/btn_date" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_time_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/add_date_ll"
            android:paddingBottom="16dp">


            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/edit_time" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_time"
                android:id="@+id/btn_time"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/std_padding"
            app:layout_constraintTop_toBottomOf="@id/add_time_ll"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@android:color/white" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>